Initial 1.19.3 port.